Update config json (#336)
* added key_features and tag
* added djjohnsongeek
* set key_features icon value to ""

--- a/config.json
+++ b/config.json
@@ -24,10 +24,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "optional_values",
-          "text_formatting"
-        ]
+        "topics": ["optional_values", "text_formatting"]
       },
       {
         "slug": "hamming",
@@ -36,10 +33,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 2,
-        "topics": [
-          "filtering",
-          "strings"
-        ]
+        "topics": ["filtering", "strings"]
       },
       {
         "slug": "gigasecond",
@@ -48,9 +42,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 2,
-        "topics": [
-          "dates"
-        ]
+        "topics": ["dates"]
       },
       {
         "slug": "bob",
@@ -59,10 +51,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 4,
-        "topics": [
-          "control_flow_if_else_statements",
-          "strings"
-        ]
+        "topics": ["control_flow_if_else_statements", "strings"]
       },
       {
         "slug": "rna-transcription",
@@ -71,10 +60,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 3,
-        "topics": [
-          "strings",
-          "transforming"
-        ]
+        "topics": ["strings", "transforming"]
       },
       {
         "slug": "luhn",
@@ -92,10 +78,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 4,
-        "topics": [
-          "filtering",
-          "strings"
-        ]
+        "topics": ["filtering", "strings"]
       },
       {
         "slug": "robot-name",
@@ -104,11 +87,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 3,
-        "topics": [
-          "classes",
-          "randomness",
-          "strings"
-        ]
+        "topics": ["classes", "randomness", "strings"]
       },
       {
         "slug": "difference-of-squares",
@@ -117,10 +96,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 2,
-        "topics": [
-          "integers",
-          "math"
-        ]
+        "topics": ["integers", "math"]
       },
       {
         "slug": "grade-school",
@@ -129,9 +105,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 6,
-        "topics": [
-          "arrays"
-        ]
+        "topics": ["arrays"]
       },
       {
         "slug": "robot-simulator",
@@ -140,9 +114,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 3,
-        "topics": [
-          "oop"
-        ]
+        "topics": ["oop"]
       },
       {
         "slug": "run-length-encoding",
@@ -151,11 +123,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 5,
-        "topics": [
-          "algorithms",
-          "strings",
-          "text_formatting"
-        ]
+        "topics": ["algorithms", "strings", "text_formatting"]
       },
       {
         "slug": "largest-series-product",
@@ -164,12 +132,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 5,
-        "topics": [
-          "integers",
-          "math",
-          "strings",
-          "transforming"
-        ]
+        "topics": ["integers", "math", "strings", "transforming"]
       },
       {
         "slug": "accumulate",
@@ -178,11 +141,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "extension_methods",
-          "sequences",
-          "transforming"
-        ]
+        "topics": ["extension_methods", "sequences", "transforming"]
       },
       {
         "slug": "acronym",
@@ -191,10 +150,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "strings",
-          "transforming"
-        ]
+        "topics": ["strings", "transforming"]
       },
       {
         "slug": "all-your-base",
@@ -203,9 +159,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "math"
-        ]
+        "topics": ["math"]
       },
       {
         "slug": "anagram",
@@ -214,10 +168,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "filtering",
-          "strings"
-        ]
+        "topics": ["filtering", "strings"]
       },
       {
         "slug": "atbash-cipher",
@@ -226,11 +177,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "algorithms",
-          "strings",
-          "transforming"
-        ]
+        "topics": ["algorithms", "strings", "transforming"]
       },
       {
         "slug": "beer-song",
@@ -239,10 +186,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "algorithms",
-          "text_formatting"
-        ]
+        "topics": ["algorithms", "text_formatting"]
       },
       {
         "slug": "binary",
@@ -251,9 +195,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "math"
-        ]
+        "topics": ["math"]
       },
       {
         "slug": "bowling",
@@ -262,10 +204,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "algorithms",
-          "control_flow_loops"
-        ]
+        "topics": ["algorithms", "control_flow_loops"]
       },
       {
         "slug": "change",
@@ -274,10 +213,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "arrays",
-          "integers"
-        ]
+        "topics": ["arrays", "integers"]
       },
       {
         "slug": "clock",
@@ -286,10 +222,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "structural_equality",
-          "time"
-        ]
+        "topics": ["structural_equality", "time"]
       },
       {
         "slug": "collatz-conjecture",
@@ -331,11 +264,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "lists",
-          "loops",
-          "strings"
-        ]
+        "topics": ["lists", "loops", "strings"]
       },
       {
         "slug": "etl",
@@ -344,11 +273,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "dictionaries",
-          "lists",
-          "transforming"
-        ]
+        "topics": ["dictionaries", "lists", "transforming"]
       },
       {
         "slug": "leap",
@@ -357,9 +282,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "integers"
-        ]
+        "topics": ["integers"]
       },
       {
         "slug": "matching-brackets",
@@ -368,10 +291,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "parsing",
-          "strings"
-        ]
+        "topics": ["parsing", "strings"]
       },
       {
         "slug": "meetup",
@@ -389,10 +309,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "parsing",
-          "transforming"
-        ]
+        "topics": ["parsing", "transforming"]
       },
       {
         "slug": "nucleotide-count",
@@ -401,10 +318,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "dictionaries",
-          "strings"
-        ]
+        "topics": ["dictionaries", "strings"]
       },
       {
         "slug": "perfect-numbers",
@@ -413,9 +327,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "math"
-        ]
+        "topics": ["math"]
       },
       {
         "slug": "phone-number",
@@ -424,10 +336,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "parsing",
-          "transforming"
-        ]
+        "topics": ["parsing", "transforming"]
       },
       {
         "slug": "rail-fence-cipher",
@@ -436,12 +345,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "algorithms",
-          "cryptography",
-          "lists",
-          "text_formatting"
-        ]
+        "topics": ["algorithms", "cryptography", "lists", "text_formatting"]
       },
       {
         "slug": "series",
@@ -459,10 +363,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "filtering",
-          "math"
-        ]
+        "topics": ["filtering", "math"]
       },
       {
         "slug": "space-age",
@@ -471,9 +372,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "floating_point_numbers"
-        ]
+        "topics": ["floating_point_numbers"]
       },
       {
         "slug": "transpose",
@@ -498,10 +397,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "enumerations",
-          "integers"
-        ]
+        "topics": ["enumerations", "integers"]
       },
       {
         "slug": "trinary",
@@ -510,9 +406,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "math"
-        ]
+        "topics": ["math"]
       },
       {
         "slug": "two-fer",
@@ -521,9 +415,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "strings"
-        ]
+        "topics": ["strings"]
       },
       {
         "slug": "variable-length-quantity",
@@ -532,10 +424,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "algorithms",
-          "bitwise_operations"
-        ]
+        "topics": ["algorithms", "bitwise_operations"]
       },
       {
         "slug": "word-count",
@@ -544,11 +433,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "dictionaries",
-          "strings",
-          "transforming"
-        ]
+        "topics": ["dictionaries", "strings", "transforming"]
       },
       {
         "slug": "wordy",
@@ -557,11 +442,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "parsing",
-          "strings",
-          "transforming"
-        ]
+        "topics": ["parsing", "strings", "transforming"]
       },
       {
         "slug": "armstrong-numbers",
@@ -570,10 +451,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 2,
-        "topics": [
-          "algorithms",
-          "math"
-        ]
+        "topics": ["algorithms", "math"]
       },
       {
         "slug": "flatten-array",
@@ -582,9 +460,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 2,
-        "topics": [
-          "arrays"
-        ]
+        "topics": ["arrays"]
       },
       {
         "slug": "queen-attack",
@@ -593,9 +469,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 2,
-        "topics": [
-          "integers"
-        ]
+        "topics": ["integers"]
       },
       {
         "slug": "raindrops",
@@ -604,10 +478,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 2,
-        "topics": [
-          "filtering",
-          "text_formatting"
-        ]
+        "topics": ["filtering", "text_formatting"]
       },
       {
         "slug": "scrabble-score",
@@ -616,11 +487,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 2,
-        "topics": [
-          "control_flow_loops",
-          "integers",
-          "strings"
-        ]
+        "topics": ["control_flow_loops", "integers", "strings"]
       },
       {
         "slug": "sum-of-multiples",
@@ -629,9 +496,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 2,
-        "topics": [
-          "math"
-        ]
+        "topics": ["math"]
       },
       {
         "slug": "affine-cipher",
@@ -640,11 +505,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 3,
-        "topics": [
-          "cryptography",
-          "math",
-          "strings"
-        ]
+        "topics": ["cryptography", "math", "strings"]
       },
       {
         "slug": "allergies",
@@ -653,10 +514,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 3,
-        "topics": [
-          "bitwise_operations",
-          "filtering"
-        ]
+        "topics": ["bitwise_operations", "filtering"]
       },
       {
         "slug": "binary-search",
@@ -674,9 +532,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 3,
-        "topics": [
-          "algorithms"
-        ]
+        "topics": ["algorithms"]
       },
       {
         "slug": "grains",
@@ -685,10 +541,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 3,
-        "topics": [
-          "algorithms",
-          "floating_point_numbers"
-        ]
+        "topics": ["algorithms", "floating_point_numbers"]
       },
       {
         "slug": "markdown",
@@ -697,9 +550,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 3,
-        "topics": [
-          "refactoring"
-        ]
+        "topics": ["refactoring"]
       },
       {
         "slug": "nth-prime",
@@ -708,9 +559,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 3,
-        "topics": [
-          "math"
-        ]
+        "topics": ["math"]
       },
       {
         "slug": "ocr-numbers",
@@ -719,11 +568,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 3,
-        "topics": [
-          "algorithms",
-          "strings",
-          "transforming"
-        ]
+        "topics": ["algorithms", "strings", "transforming"]
       },
       {
         "slug": "pascals-triangle",
@@ -732,9 +577,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 3,
-        "topics": [
-          "math"
-        ]
+        "topics": ["math"]
       },
       {
         "slug": "prime-factors",
@@ -743,9 +586,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 3,
-        "topics": [
-          "math"
-        ]
+        "topics": ["math"]
       },
       {
         "slug": "pangram",
@@ -754,9 +595,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 4,
-        "topics": [
-          "strings"
-        ]
+        "topics": ["strings"]
       },
       {
         "slug": "pig-latin",
@@ -765,10 +604,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 4,
-        "topics": [
-          "strings",
-          "transforming"
-        ]
+        "topics": ["strings", "transforming"]
       },
       {
         "slug": "roman-numerals",
@@ -777,10 +613,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 4,
-        "topics": [
-          "control_flow_loops",
-          "transforming"
-        ]
+        "topics": ["control_flow_loops", "transforming"]
       },
       {
         "slug": "palindrome-products",
@@ -789,14 +622,56 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 6,
-        "topics": [
-          "algorithms",
-          "math"
-        ]
+        "topics": ["algorithms", "math"]
       }
     ]
   },
   "concepts": [],
-  "key_features": [],
-  "tags": []
+  "key_features": [
+    {
+      "title": "Evolving",
+      "content": "PHP is consistently being updated and improved.",
+      "icon": ""
+    },
+    {
+      "title": "Web Focused",
+      "content": "PHP was designed specifically with web development in mind.",
+      "icon": ""
+    },
+    {
+      "title": "Flexible",
+      "content": "PHP is well suited scripting language for multiple platforms.",
+      "icon": ""
+    },
+    {
+      "title": "Forgiving",
+      "content": "PHP allows your code to continue to execute, while still providing robust error reporting.",
+      "icon": ""
+    },
+    {
+      "title": "Practical",
+      "content": "The classic syntax and well featured standard library make rapid development easy.",
+      "icon": ""
+    },
+    {
+      "title": "Documented",
+      "content": "PHP is well documented by the official PHP.net website and it's helpful community.",
+      "icon": ""
+    }
+  ],
+  "tags": [
+    "paradigm/imperative",
+    "paradigm/object_oriented",
+    "paradigm/procedural",
+    "typing/dynamic",
+    "typing/weak",
+    "execution_mode/interpreted",
+    "platform/windows",
+    "platform/mac",
+    "platform/linux",
+    "runtime/language_specific",
+    "used_for/backends",
+    "used_for/cross_platform_development",
+    "used_for/scripts"
+  ]
 }
