--- a/.github/workflows/exercise-tests-phpunit-8.yml
+++ b/.github/workflows/exercise-tests-phpunit-8.yml
@@ -15,14 +15,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-version: [7.3, 7.4, 8.0]
+        php-version: [7.4, 8.0]
         os: [ubuntu-latest, windows-latest, macOS-latest]
-
-        exclude:
-          - php-version: 7.3
-            os: windows-latest
-          - php-version: 7.3
-            os: macOS-latest
 
     steps:
       - name: Set git line endings
