--- a/.github/workflows/exercise-lint-phpcs-psr-12.yml
+++ b/.github/workflows/exercise-lint-phpcs-psr-12.yml
@@ -33,11 +33,13 @@ jobs:
           extensions: gmp
 
       - name: Install dependencies
+        shell: bash
         run: |
           curl -Lo bin/phpcs.phar https://squizlabs.github.io/PHP_CodeSniffer/phpcs.phar
           chmod +x bin/phpcs.phar
 
       - name: Lint exercises
+        shell: bash
         env:
           PHPCS_BIN: 'bin/phpcs.phar'
           PHPCS_RULES: 'phpcs-php-psr12.xml'
