--- a/.github/workflows/exercise-tests-phpunit-9.yml
+++ b/.github/workflows/exercise-tests-phpunit-9.yml
@@ -33,11 +33,13 @@ jobs:
           extensions: gmp
 
       - name: Install dependencies
+        shell: bash
         run: |
           curl -Lo ./bin/phpunit-9.phar https://phar.phpunit.de/phpunit-9.phar
           chmod +x bin/phpunit-9.phar
 
       - name: Test exercises\
+        shell: bash
         env:
           PHPUNIT_BIN: 'bin/phpunit-9.phar'
         run: bin/test.sh
