--- a/.github/workflows/exercise-lint-phpcs-psr-12.yml
+++ b/.github/workflows/exercise-lint-phpcs-psr-12.yml
@@ -42,5 +42,5 @@ jobs:
         shell: bash
         env:
           PHPCS_BIN: 'bin/phpcs.phar'
-          PHPCS_RULES: 'phpcs-php-psr12.xml'
+          PHPCS_RULES: 'phpcs-php.xml'
         run: bin/lint.sh
