Flatten authors and contributors array
The authors and contributors of exercises are stored in an array in the exercises' `.meta/config.json` files.
We used to have separate fields for the GitHub- and Exercism username of the user.
As we're only using the GitHub username, we've flatten the `authors` and `contributors` array to an array of strings representing the GitHub usernames.

See https://github.com/exercism/docs/pull/90/files

--- a/exercises/practice/ordinal-number/.meta/config.json
+++ b/exercises/practice/ordinal-number/.meta/config.json
@@ -1,15 +1,9 @@
 {
   "authors": [
-    {
-      "github_username": "codedge",
-      "exercism_username": "codedge"
-    }
+    "codedge"
   ],
   "contributors": [
-    {
-      "github_username": "neenjaw",
-      "exercism_username": "neenjaw"
-    }
+    "neenjaw"
   ],
   "files": {
     "solution": [
