--- a/exercises/practice/ordinal-number/.meta/config.json
+++ b/exercises/practice/ordinal-number/.meta/config.json
@@ -1,5 +1,5 @@
 {
-  "blurb": "Write a function to convert normal numbers to ordinal numbers.",
+  "blurb": "Convert numbers to ordinal numerals.",
   "authors": [
     "codedge"
   ],
